# bioideas

./: .env.example  .gitignore  README.md  biotech_intelligence_hub_concept.md  pyproject.toml  requirements.txt  synergy_analysis_earnings_call_pipeline_briefs.md  test_system.py  tier1_ideas_full.jsonl  tier2_ideas_full.jsonl
.streamlit/: config.toml
app/: streamlit_app.py
data/processed/: chunks.jsonl  comparisons.jsonl  elo_ratings.jsonl  episodes.jsonl  ideas.jsonl  ideas_deduped.jsonl  nuggets.jsonl  scores.jsonl
data/processed/memos/: 01_Deal Terms Normalizer_ сравнение сделок при скрыты.md  01_ITT_Tolerability Normalizer для пресс-релизов по o.md  02_Earnings Call Pipeline Briefs_ авто-выжимка _что и.md  02_ITT_Tolerability Normalizer для пресс-релизов по o.md  03_CRL Radar_ мониторинг и _честность_ раскрытий по F.md  03_Market Reaction Playbook_ генератор коммуникаций_ .md  04_DealClarity_ детектор _masked terms_ и неполноты в.md  04_M_A Signal Radar для biotech_ _кто и почему будет .md  05_Biotech Capital Compass_ объяснимый монитор _почем.md  05_M_A Radar для частного biotech_ трекер _волны_ и о.md  06_Data Disclosure Pack_ стандартизированный _паспорт.md  07_DealGlass для R_A_ оценка непрозрачных сделок.md  08_Runway-to-Catalyst Radar для публичного biotech.md  09_ReadoutCompare_ кросс_триал сравнение клинических .md  10_Obesity Trial Safety Radar.md
data/raw/: .gitkeep
src/bioideas/: __init__.py  chunking.py  cli.py  config.py  embeddings.py  llm.py  models.py  storage.py  vectorstore.py
src/bioideas/pipeline/: __init__.py  s01_ingest.py  (+7 more)
